# Lazlo-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Ball.h  Brick.h  BrickManager.h  CollisionComponent.h  Component.h  ECS.h  Entity.h  Game.h  Keyboard.h  MovementComponent.h  Physics.h  Player.h  PositionComponent.h  Renderer.h  SpriteComponent.h  TextureLoader.h  Types.h  Window.h
src/: Game.cpp  main.cpp
src/Components/: CollisionComponent.cpp  Component.cpp  MovementComponent.cpp  PositionComponent.cpp  SpriteComponent.cpp
src/Core/: ECS.cpp  Keyboard.cpp  Renderer.cpp  Window.cpp
src/Entities/: Ball.cpp  Brick.cpp  Entity.cpp  Player.cpp
src/Utilities/: BrickManager.cpp  TextureLoader.cpp
src/core/: Application.cpp  Application.h  ApplicationConfig.h  Event.h  EventSystem.cpp  EventSystem.h  Logging.h  Renderer.cpp  Renderer.h  Vector2D.h  Window.cpp  Window.h
